Added socials and changes

--- a/index.html
+++ b/index.html
@@ -153,8 +153,12 @@
 
       <section class="about-section" id="about">
         <div class="about-text">
-          <h4>About Me</h4>
-          <h5>Welcome to my portfolio!</h5>
+          <div class="animate-h4">
+            <h4>About Me</h4>
+          </div>
+          <div class="animate-h5">
+            <h5>Welcome to my portfolio!</h5>
+          </div>
           <p>
             I'm Sander Selfors, a front-end developer student currently based in
             Oslo. Throughout my first year as a student, I have cultivated a
@@ -189,24 +193,46 @@
             collaborations, please don't hesitate to reach out. I look forward
             to connecting with you!
           </p>
-
-          <a href="https://github.com/sanderselfors" class="mygithub-btn"
-            >Visit My GitHub Profile</a
-          >
           <a
             href="mailto:sanderselfors@gmail.com?subject=Portfolio"
             class="contact-btn"
-            >Contact Me</a
-          >
+            >Contact Me
+            <img
+              src="/Images/mail-svgrepo-com (1).png"
+              alt="Mail"
+              class="mail-icon"
+          /></a>
         </div>
       </section>
     </main>
 
     <footer>
+      <div class="social-media">
+        <a
+          href="https://www.linkedin.com/in/sander-selfors-659a48215/"
+          target="_blank"
+        >
+          <img
+            src="/Images/linkedin-svgrepo-com.png"
+            alt="LinkedIn"
+            class="social-media-icon"
+          />
+        </a>
+        <a href="https://github.com/sanderselfors" target="_blank">
+          <img
+            src="/Images/github-svgrepo-com.png"
+            alt="GitHub"
+            class="social-media-icon"
+        /></a>
+      </div>
+      <div class="animate-h6">
+        <h6>Follow My Socials!</h6>
+      </div>
       <div class="copyright">
-        <h6>© 2023 Made by Sander Selfors</h6>
+        <p>© 2023 Made by Sander Selfors</p>
       </div>
     </footer>
+
     <script type="module" src="/JS/script.js"></script>
     <script type="module" src="/JS/loader.js"></script>
   </body>
