--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             class="contact-btn"
             >Contact Me
             <img
-              src="/Images/mail-svgrepo-com (1).png"
+              src="/Images/mail-svgrepo-com (1)-min.png"
               alt="Mail"
               class="mail-icon"
           /></a>
@@ -207,6 +207,24 @@
     </main>
 
     <footer>
+      <div class="social-media">
+        <a
+          href="https://www.linkedin.com/in/sander-selfors-659a48215/"
+          target="_blank"
+        >
+          <img
+            src="/Images/linkedin-svgrepo-com-min.png"
+            alt="LinkedIn"
+            class="social-media-icon"
+          />
+        </a>
+        <a href="https://github.com/sanderselfors" target="_blank">
+          <img
+            src="/Images/github-svgrepo-com-min.png"
+            alt="GitHub"
+            class="social-media-icon"
+        /></a>
+      </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
       </div>
