--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             class="contact-btn"
             >Contact Me
             <img
-              src="/Images/mail-svgrepo-com (1)-min.png"
+              src="/Images/Skjermbilde 2023-06-06 kl. 20.42.45.png"
               alt="Mail"
               class="mail-icon"
           /></a>
@@ -213,14 +213,14 @@
           target="_blank"
         >
           <img
-            src="/Images/linkedin-svgrepo-com-min.png"
+            src="/Images/Skjermbilde 2023-06-06 kl. 20.40.24.png"
             alt="LinkedIn"
             class="social-media-icon"
           />
         </a>
         <a href="https://github.com/sanderselfors" target="_blank">
           <img
-            src="/Images/github-svgrepo-com-min.png"
+            src="/Images/Skjermbilde 2023-06-06 kl. 20.41.16.png"
             alt="GitHub"
             class="social-media-icon"
         /></a>
