--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
       <section class="rainydays-section" id="projects">
         <img
-          src="/Images/Skjermbilde 2023-06-02 kl. 17.58.34.png"
+          src="/Images/Skjermbilde 2023-06-02 kl. 17.58.34-min.png"
           alt="rainydays-screenshot"
           class="rainydays-pic"
         />
@@ -93,7 +93,7 @@
 
       <section class="semesterproject-section">
         <img
-          src="/Images/Skjermbilde 2023-06-02 kl. 18.02.56.png"
+          src="/Images/Skjermbilde 2023-06-02 kl. 18.02.56-min.png"
           alt="semesterproject-screenshot"
           class="semesterproject-pic"
         />
@@ -123,7 +123,7 @@
 
       <section class="exam-section">
         <img
-          src="/Images/Skjermbilde 2023-06-02 kl. 18.01.10.png"
+          src="/Images/Skjermbilde 2023-06-02 kl. 18.01.10-min.png"
           alt="exam-screenshot"
           class="exam-pic"
         />
@@ -198,7 +198,7 @@
             class="contact-btn"
             >Contact Me
             <img
-              src="/Images/Skjermbilde 2023-06-06 kl. 20.42.45.png"
+              src="/Images/mail-svgrepo-com (1)-min.png"
               alt="Mail"
               class="mail-icon"
           /></a>
@@ -213,14 +213,14 @@
           target="_blank"
         >
           <img
-            src="/Images/Skjermbilde 2023-06-06 kl. 20.40.24.png"
+            src="/Images/linkedin-svgrepo-com-min.png"
             alt="LinkedIn"
             class="social-media-icon"
           />
         </a>
         <a href="https://github.com/sanderselfors" target="_blank">
           <img
-            src="/Images/Skjermbilde 2023-06-06 kl. 20.41.16.png"
+            src="/Images/github-svgrepo-com-min.png"
             alt="GitHub"
             class="social-media-icon"
         /></a>
