--- a/index.html
+++ b/index.html
@@ -212,18 +212,8 @@
           href="https://www.linkedin.com/in/sander-selfors-659a48215/"
           target="_blank"
         >
-          <img
-            src="/Images/linkedin-svgrepo-com-min.png"
-            alt="LinkedIn"
-            class="social-media-icon"
-          />
         </a>
-        <a href="https://github.com/sanderselfors" target="_blank">
-          <img
-            src="/Images/github-svgrepo-com-min.png"
-            alt="GitHub"
-            class="social-media-icon"
-        /></a>
+        <a href="https://github.com/sanderselfors" target="_blank"> </a>
       </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
