--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             class="contact-btn"
             >Contact Me
             <img
-              src="/Images/mail-svgrepo-com (1)-min.png"
+              src="/Images/mail-svgrepo-com-_1_-min.webp"
               alt="Mail"
               class="mail-icon"
           /></a>
@@ -212,8 +212,18 @@
           href="https://www.linkedin.com/in/sander-selfors-659a48215/"
           target="_blank"
         >
+          <img
+            src="/Images/linkedin-svgrepo-com-min.webp"
+            alt="LinkedIn"
+            class="social-media-icon"
+          />
         </a>
-        <a href="https://github.com/sanderselfors" target="_blank"> </a>
+        <a href="https://github.com/sanderselfors" target="_blank">
+          <img
+            src="/Images/github-svgrepo-com-min.webp"
+            alt="GitHub"
+            class="social-media-icon"
+        /></a>
       </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
