--- a/index.html
+++ b/index.html
@@ -197,11 +197,7 @@
             href="mailto:sanderselfors@gmail.com?subject=Portfolio"
             class="contact-btn"
             >Contact Me
-            <img
-              src="/Images/mail-svgrepo-com-_1_-min.webp"
-              alt="Mail"
-              class="mail-icon"
-          /></a>
+          </a>
         </div>
       </section>
     </main>
@@ -211,19 +207,9 @@
         <a
           href="https://www.linkedin.com/in/sander-selfors-659a48215/"
           target="_blank"
-        >
-          <img
-            src="/Images/linkedin-svgrepo-com-min.webp"
-            alt="LinkedIn"
-            class="social-media-icon"
-          />
+          >LinkedIn
         </a>
-        <a href="https://github.com/sanderselfors" target="_blank">
-          <img
-            src="/Images/github-svgrepo-com-min.webp"
-            alt="GitHub"
-            class="social-media-icon"
-        /></a>
+        <a href="https://github.com/sanderselfors" target="_blank">GitHub </a>
       </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
