--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
         <a
           href="https://www.linkedin.com/in/sander-selfors-659a48215/"
           target="_blank"
-          >LinkedIn
+        >
         </a>
-        <a href="https://github.com/sanderselfors" target="_blank">GitHub </a>
+        <a href="https://github.com/sanderselfors" target="_blank"> </a>
       </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
