--- a/index.html
+++ b/index.html
@@ -197,7 +197,11 @@
             href="mailto:sanderselfors@gmail.com?subject=Portfolio"
             class="contact-btn"
             >Contact Me
-          </a>
+            <img
+              src="/Images/mail-svgrepo-com (1)-min.png"
+              alt="Mail"
+              class="mail-icon"
+          /></a>
         </div>
       </section>
     </main>
@@ -208,8 +212,18 @@
           href="https://www.linkedin.com/in/sander-selfors-659a48215/"
           target="_blank"
         >
+          <img
+            src="/Images/linkedin-svgrepo-com-min.png"
+            alt="LinkedIn"
+            class="social-media-icon"
+          />
         </a>
-        <a href="https://github.com/sanderselfors" target="_blank"> </a>
+        <a href="https://github.com/sanderselfors" target="_blank">
+          <img
+            src="/Images/github-svgrepo-com-min.png"
+            alt="GitHub"
+            class="social-media-icon"
+        /></a>
       </div>
       <div class="animate-h6">
         <h6>Follow My Socials!</h6>
