--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="animate-h1">
         <h1>
           <span style="font-weight: bold">Hi! </span><br />
-          I´m <span style="font-weight: bold">Sander Selfors, </span>Front-End
+          I´m <span style="font-weight: bold">Sander Selfors, </span>Frontend
           Developer.
         </h1>
       </div>
