--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
       <div class="animate-h1">
         <h1>
           <span style="font-weight: bold">Hi! </span><br />
-          I´m <span style="font-weight: bold">Sander Selfors, </span>Frontend
-          Developer.
+          <span style="font-weight: lighter"> I´m</span>
+          <span style="font-weight: bold">Sander Selfors </span
+          ><span style="font-weight: lighter"> Frontend Developer</span>
         </h1>
       </div>
     </header>
