--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
       <div class="animate-h1">
         <h1>
-          <span style="font-weight: bold">Hi! </span><br />
-          <span style="font-weight: lighter"> I´m</span>
-          <span style="font-weight: bold">Sander Selfors </span
-          ><span style="font-weight: lighter"> Frontend Developer</span>
+          <span style="font-weight: bold">Hi!</span><br />
+          <span style="font-weight: lighter">I´m</span>
+          <span style="font-weight: bold">Sander Selfors</span><br /><span
+            style="font-weight: lighter"
+            >Frontend Developer</span
+          >
         </h1>
       </div>
     </header>
