Changes in about section

--- a/index.html
+++ b/index.html
@@ -173,13 +173,56 @@
             into aesthetically pleasing and functional designs.
           </p>
           <br />
-          <p>
-            I firmly believe that exceptional user experiences are rooted in
-            good design. Combining my love for design and development, I strive
-            to create websites that not only look visually stunning but also
-            provide intuitive and seamless interactions.
-          </p>
+          <div class="animate-h5">
+            <h5>Skills and tools:</h5>
+          </div>
+          <div class="skills-tools">
+            <p class="skills-div">
+              HTML
+              <img
+                src="/Images/html-124-svgrepo-com-min.png"
+                alt="HTML-logo"
+                class="skills-logo"
+              />
+            </p>
+            <p class="skills-div">
+              CSS
+              <img
+                src="/Images/css3-02-svgrepo-com-min.png"
+                alt="CSS-logo"
+                class="skills-logo"
+              />
+            </p>
+            <p class="skills-div">
+              JAVASCRIPT
+              <img
+                src="/Images/javascript-155-svgrepo-com-min.png"
+                alt="JAVASCRIPT-logo"
+                class="skills-logo"
+              />
+            </p>
+            <p class="skills-div">
+              FIGMA
+              <img
+                src="/Images/figma-svgrepo-com-min.png"
+                alt="FIGMA-logo"
+                class="skills-logo"
+              />
+            </p>
+            <p class="skills-div">
+              WORDPRESS
+              <img
+                src="/Images/wordpress-svgrepo-com-min.png"
+                alt="WORDPRESS-logo"
+                class="skills-logo"
+              />
+            </p>
+          </div>
+
           <br />
+          <div class="animate-h5">
+            <h5>Collaboration and Inspiration</h5>
+          </div>
           <p>
             Collaboration and effective communication are crucial in the field
             of web development. I understand the importance of teamwork and have
@@ -191,6 +234,9 @@
             front-end developer.
           </p>
           <br />
+          <div class="animate-h5">
+            <h5>Get in Touch</h5>
+          </div>
           <p>
             If you have any questions or would like to discuss potential
             collaborations, please don't hesitate to reach out. I look forward
