--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h4>About Me</h4>
           </div>
           <div class="animate-h5">
-            <h5>Welcome to my portfolio!</h5>
+            <h5>Welcome to My Portfolio!</h5>
           </div>
           <p>
             I'm Sander Selfors, a front-end developer student currently based in
@@ -174,7 +174,7 @@
           </p>
           <br />
           <div class="animate-h5">
-            <h5>Skills and tools:</h5>
+            <h5>Skills and Tools:</h5>
           </div>
           <div class="skills-tools">
             <p class="skills-div">
