--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="rainydays-text">
           <h3>Rainy Days</h3>
           <p>
-            This was the first project at Noroff. It´s a pure HTML and CSS
+            This was my first project at Noroff. It´s a pure HTML and CSS
             website. The case was to create a fictional ecommerce site that
             sells rainjackets to people in the age of 30-60 years old.
           </p>
