--- a/index.html
+++ b/index.html
@@ -90,11 +90,10 @@
           <a
             href="https://rainydayssanderselfors.netlify.app/"
             class="website-btn"
-            >Go To Website</a
+            >Go to Website</a
           >
         </div>
       </section>
-      <br />
       <br />
       <br />
       <br />
@@ -119,12 +118,11 @@
             >GitHub Repo</a
           >
           <a href="https://sp1sanderselfors.netlify.app/" class="website-btn"
-            >Go To Website</a
+            >Go to Website</a
           >
         </div>
       </section>
 
-      <br />
       <br />
       <br />
       <br />
@@ -150,11 +148,10 @@
             >GitHub Repo</a
           >
           <a href="https://exam1selfors.netlify.app/" class="website-btn"
-            >Go To Website</a
+            >Go to Website</a
           >
         </div>
       </section>
-      <br />
       <br />
       <br />
       <br />
