--- a/index.html
+++ b/index.html
@@ -67,66 +67,6 @@
       <div class="animate-h2">
         <h2>My Projects</h2>
       </div>
-      <section class="rainydays-section" id="projects">
-        <img
-          src="/Images/Skjermbilde 2023-06-02 kl. 17.58.34-min.png"
-          alt="rainydays-screenshot"
-          class="rainydays-pic"
-        />
-
-        <div class="rainydays-text">
-          <h3>Rainy Days</h3>
-          <p>
-            This was my first project at Noroff. It´s a pure HTML and CSS
-            website. The case was to create a fictional ecommerce site that
-            sells rainjackets to people in the age of 30-60 years old.
-          </p>
-
-          <a
-            href="https://github.com/sanderselfors/HTML-and-CSS-CA"
-            class="github-btn"
-            >GitHub Repo</a
-          >
-          <a
-            href="https://rainydayssanderselfors.netlify.app/"
-            class="website-btn"
-            >Go to Website</a
-          >
-        </div>
-      </section>
-      <br />
-      <br />
-      <br />
-
-      <section class="semesterproject-section">
-        <img
-          src="/Images/Skjermbilde 2023-06-02 kl. 18.02.56-min.png"
-          alt="semesterproject-screenshot"
-          class="semesterproject-pic"
-        />
-
-        <div class="semesterproject-text">
-          <h3>Science Museum</h3>
-          <p>
-            My second project was to create a fictional science museum. The
-            target audience is primary and middle school children (7-15) and
-            families with young children.
-          </p>
-          <a
-            href="https://github.com/sanderselfors/Semester-Project-1"
-            class="github-btn"
-            >GitHub Repo</a
-          >
-          <a href="https://sp1sanderselfors.netlify.app/" class="website-btn"
-            >Go to Website</a
-          >
-        </div>
-      </section>
-
-      <br />
-      <br />
-      <br />
-
       <section class="exam-section">
         <img
           src="/Images/Skjermbilde 2023-06-02 kl. 18.01.10-min.png"
@@ -137,9 +77,10 @@
         <div class="exam-text">
           <h3>ExpandMedia</h3>
           <p>
-            This was my exam at Noroff. The case was to build a blog using
+            This was my first exam at Noroff. The case was to build a blog using
             Headless CMS to store the content, and using REST API to fetch the
-            data. I chose to create a blog about marketing.
+            data. I chose to create a blog about marketing. I won an award for
+            "Best Student Work" on this website.
           </p>
 
           <a
@@ -155,6 +96,66 @@
       <br />
       <br />
       <br />
+      <section class="bidit-section" id="projects">
+        <img
+          src="/Images/Skjermbilde 2024-06-10 kl. 17.51.31.png"
+          alt="bidit-screenshot"
+          class="bidit-pic"
+        />
+
+        <div class="bidit-text">
+          <h3>BIDIT.</h3>
+          <p>
+            This was the semester-project for my second year. I was tasked with
+            creating an auction website. When a new user joins the website, they
+            are given 1000 credits to use on the site. They can get credits by
+            selling items and use credit by buying items.
+          </p>
+
+          <a
+            href="https://github.com/sanderselfors/Semester-Project-2"
+            class="github-btn"
+            >GitHub Repo</a
+          >
+          <a href="https://sp2bidit.netlify.app/" class="website-btn"
+            >Go to Website</a
+          >
+        </div>
+      </section>
+      <br />
+      <br />
+      <br />
+
+      <section class="holidaze-section">
+        <img
+          src="/Images/Skjermbilde 2024-05-30 kl. 18.37.46.png"
+          alt="holidaze-screenshot"
+          class="holidaze-pic"
+        />
+
+        <div class="holidaze-text">
+          <h3>Holidaze</h3>
+          <p>
+            My final exam at Noroff. I developed a modern front-end for a new
+            accommodation booking site. The project involved creating a
+            user-friendly interface for customers to book holiday venues and an
+            admin side for managers to register and manage their venues and
+            bookings.
+          </p>
+          <a
+            href="https://github.com/sanderselfors/exam-2-noroff"
+            class="github-btn"
+            >GitHub Repo</a
+          >
+          <a href="https://holidaze-ss.netlify.app/" class="website-btn"
+            >Go to Website</a
+          >
+        </div>
+      </section>
+
+      <br />
+      <br />
+      <br />
 
       <section class="about-section" id="about">
         <div class="about-text">
@@ -165,20 +166,39 @@
             <h5>Welcome to My Portfolio!</h5>
           </div>
           <p>
-            I'm Sander Selfors, a front-end developer student currently based in
-            Oslo. Throughout my first year as a student, I have cultivated a
-            strong passion for web development and design. Proficient in HTML,
-            CSS, and JavaScript, I enjoy creating interactive and visually
-            appealing user experiences. I also have experience working with
-            WordPress, using it as a Headless CMS. Additionally, my design
-            skills, honed with tools like Figma, enable me to transform ideas
-            into aesthetically pleasing and functional designs.
+            I'm Sander Selfors, a front-end developer based in Oslo, recently
+            completing my two years of study at Noroff. Over this time, I've
+            deepened my passion for web development and design, becoming
+            proficient in HTML, CSS, JavaScript, and gaining significant
+            experience with React, Tailwind CSS, and working with APIs. My
+            journey has been highlighted by winning the Golden Egg Award for
+            "Best Student Work" for my project "ExpandMedia." I enjoy creating
+            interactive and visually appealing user experiences and have also
+            worked with WordPress as a Headless CMS. My design skills, honed
+            with tools like Figma, enable me to transform ideas into functional
+            and aesthetically pleasing designs.
           </p>
           <br />
           <div class="animate-h5">
             <h5>Skills and Tools:</h5>
           </div>
           <div class="skills-tools">
+            <p class="skills-div">
+              ReactJs
+              <img
+                src="/Images/reactjs-svgrepo-com.svg"
+                alt="ReactJs-logo"
+                class="skills-logo"
+              />
+            </p>
+            <p class="skills-div">
+              TailwindCSS
+              <img
+                src="/Images/tailwind-css-svgrepo-com.svg"
+                alt="TailwindCSS-logo"
+                class="skills-logo"
+              />
+            </p>
             <p class="skills-div">
               HTML
               <img
