Updated about me section

--- a/index.html
+++ b/index.html
@@ -170,8 +170,11 @@
             completing my two years of study at Noroff. Over this time, I've
             deepened my passion for web development and design, becoming
             proficient in HTML, CSS, JavaScript, and gaining significant
-            experience with React, Tailwind CSS, and working with APIs. My
-            journey has been highlighted by winning the Golden Egg Award for
+            experience with React, Tailwind CSS, and working with APIs.
+          </p>
+          <br />
+          <p>
+            My journey has been highlighted by winning the Golden Egg Award for
             "Best Student Work" for my project "ExpandMedia." I enjoy creating
             interactive and visually appealing user experiences and have also
             worked with WordPress as a Headless CMS. My design skills, honed
