--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="animate-h2">
         <h2>My Projects</h2>
       </div>
-      <section class="exam-section">
+      <section class="exam-section" id="projects">
         <img
           src="/Images/Skjermbilde 2023-06-02 kl. 18.01.10-min.png"
           alt="exam-screenshot"
@@ -96,7 +96,7 @@
       <br />
       <br />
       <br />
-      <section class="bidit-section" id="projects">
+      <section class="bidit-section">
         <img
           src="/Images/Skjermbilde 2024-06-10 kl. 17.51.31.png"
           alt="bidit-screenshot"
