--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             admin side for managers to register and manage their venues and
             bookings.
           </p>
+          <p>Grade: A</p>
           <a
             href="https://github.com/sanderselfors/exam-2-noroff"
             class="github-btn"
@@ -111,6 +112,7 @@
             data. I chose to create a blog about marketing. I won an award for
             "Best Student Work" on this website.
           </p>
+          <p>Grade: A</p>
 
           <a
             href="https://github.com/Noroff-FED-Campus-Assignments/fed1-exam-sanderselfors"
@@ -140,6 +142,7 @@
             are given 1000 credits to use on the site. They can get credits by
             selling items and use credit by buying items.
           </p>
+          <p>Grade: A</p>
 
           <a
             href="https://github.com/sanderselfors/Semester-Project-2"
